--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"config": "^3.3.4",
 		"express": "^4.17.1",
+		"matter-js": "^0.16.1",
 		"mongoose": "^5.11.15",
 		"socket.io": "^3.1.2"
 	},
