fix: :green_heart: cleanup target folder (#80)

--- a/azure-ci-cd.yml
+++ b/azure-ci-cd.yml
@@ -61,6 +61,7 @@ jobs:
                 contents: "**"
                 targetFolder: "/opt/studentRun/"
                 readyTimeout: "20000"
+                cleanTargetFolder: true
 
           - task: SSH@0
             displayName: Restart service on server
