feat: :recycle: Added Logging for Latency in Event transmission
* included timestamp in events for debugging

* Log latency in ms

* cleanup

* package.json und package-lock.json gelöscht und ins gitignore aufgenommen

--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,5 @@ $RECYCLE.BIN/
 test-report.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,vscode,windows,webstorm+all,react
+package.json
+package-lock.json
