--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
 		"express": "^4.17.1",
 		"matter-js": "^0.16.1",
 		"mongoose": "^5.11.15",
-		"socket.io": "^3.1.2"
+		"socket.io": "^3.1.2",
+		"winston": "^3.3.3"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
