--- a/app/package.json
+++ b/app/package.json
@@ -2,11 +2,12 @@
 	"name": "studentrun",
 	"version": "1.0.0",
 	"description": "Student Run Backend",
-	"main": "server.js",
+	"main": "backend/server.js",
 	"scripts": {
 		"start": "node backend/server.js",
 		"app": "nodemon backend/server.js",
-		"test": "jest"
+		"test": "jest",
+		"css-build": "node-sass --omit-source-map-url public/styles/global.scss public/styles/global.css"
 	},
 	"repository": {
 		"type": "git",
@@ -25,8 +26,10 @@
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
+		"bulma": "^0.9.2",
 		"jest": "^26.6.3",
 		"jest-sonar-reporter": "^2.0.0",
+		"node-sass": "^5.0.0",
 		"nodemon": "^2.0.7",
 		"superagent": "^6.1.0",
 		"supertest": "^6.1.3"
