--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.17.1",
 		"matter-js": "^0.16.1",
 		"mongoose": "^5.11.15",
+		"morgan": "^1.10.0",
 		"socket.io": "^3.1.2",
 		"winston": "^3.3.3"
 	},
@@ -33,5 +34,10 @@
 		"nodemon": "^2.0.7",
 		"superagent": "^6.1.0",
 		"supertest": "^6.1.3"
+	},
+	"prettier": {
+		"trailingComma": "es5",
+		"tabWidth": 4,
+		"useTabs": true
 	}
 }
