ci: :bug: exclude files from code coverage (#107)

--- a/azure-ci-cd.yml
+++ b/azure-ci-cd.yml
@@ -52,7 +52,7 @@ jobs:
                       -Dsonar.login=$(SONARLOGIN) \
                       -Dsonar.testExecutionReportPaths=test-report.xml \
                       -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info \
-                      -Dsonar.coverage.exclusions=\*\*/__tests__/\*\*,\*\*/config/\*\*,jest.config.js
+                      -Dsonar.coverage.exclusions=\*\*/__tests__/\*\*,\*\*/config/\*\*,jest.config.js,\*\*/app.js,\*\*/server.js,\*\*/updateHandler.js,public/js/module.js
 
           - task: CopyFilesOverSSH@0
             displayName: Copy app to server
