--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,9 @@
 	"description": "Student Run Backend",
 	"main": "backend/server.js",
 	"scripts": {
-		"start": "export NODE_ENV=production && node backend/server.js",
+		"start": "cross-env NODE_ENV=production node backend/server.js",
 		"app": "nodemon backend/server.js",
-		"debug": "export LOGLEVEL=debug && nodemon backend/server.js",
+		"debug": "cross-env LOGLEVEL=debug nodemon backend/server.js",
 		"test": "jest",
 		"css-build": "node-sass --omit-source-map-url public/styles/global.scss public/styles/global.css"
 	},
@@ -29,6 +29,7 @@
 		"babel-cli": "^6.26.0",
 		"babel-preset-env": "^1.7.0",
 		"bulma": "^0.9.2",
+		"cross-env": "^7.0.3",
 		"jest": "^26.6.3",
 		"jest-sonar-reporter": "^2.0.0",
 		"node-sass": "^5.0.0",
