feat: :heavy_plus_sign: added and configured browserify (#124)
* feat: :heavy_plus_sign: added and configured browserify

introduced browserify (and watchify) to be able to use CommonJS require() and module.exports

* refactor: :fire: removed build files

* fix: :bug: fixed .gitignore pattern for build folder

* fix: :twisted_rightwards_arrows: fixed imports

fixed imports in frontend for merge with finish line branch

* feat: :sparkles: add debug option to watchify command

--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,6 @@ test-report.xml
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,vscode,windows,webstorm+all,react
 package.json
 package-lock.json
+
+# public build folder
+app/public/build
