--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
 		"phaser": "^3.54.0",
 		"socket.io": "^3.1.2",
 		"socket.io-client": "^4.0.1",
+		"sortedlist": "^0.3.1",
 		"watchify": "^4.0.0",
 		"winston": "^3.3.3"
 	},
