--- a/azure-ci-cd.yml
+++ b/azure-ci-cd.yml
@@ -25,6 +25,13 @@ jobs:
                 workingDir: "app"
 
           - task: Npm@1
+            displayName: Build app
+            inputs:
+                command: "custom"
+                workingDir: "app"
+                customCommand: "run build"
+
+          - task: Npm@1
             displayName: Testing app
             inputs:
                 command: "custom"
