--- a/app/package.json
+++ b/app/package.json
@@ -5,13 +5,15 @@
 	"main": "backend/server.js",
 	"scripts": {
 		"prod": "cross-env NODE_ENV=production node backend/server.js",
-		"dev": "npm run watchify & nodemon backend/server.js",
+		"dev": "npm-run-all --parallel watchify sass-watch nodemon",
 		"debug": "cross-env LOGLEVEL=debug npm run dev",
 		"test": "jest",
+		"nodemon": "nodemon backend/server.js",
 		"watchify": "watchify public/js/game.js -o public/build/bundle.js -v -d",
-		"build": "npm run js-build & npm run css-build",
+		"sass-watch": "sass --no-source-map --watch public/styles/global.scss public/build/global.css",
+		"build": "npm-run-all --parallel js-build css-build",
 		"js-build": "browserify public/js/game.js -o public/build/bundle.js",
-		"css-build": "node-sass --omit-source-map-url public/styles/global.scss public/build/global.css"
+		"css-build": "sass --no-source-map public/styles/global.scss public/build/global.css"
 	},
 	"repository": {
 		"type": "git",
@@ -40,8 +42,9 @@
 		"cross-env": "^7.0.3",
 		"jest": "^26.6.3",
 		"jest-sonar-reporter": "^2.0.0",
-		"node-sass": "^5.0.0",
 		"nodemon": "^2.0.7",
+		"npm-run-all": "^4.1.5",
+		"sass": "^1.32.11",
 		"superagent": "^6.1.0",
 		"supertest": "^6.1.3"
 	},
