--- a/app/package.json
+++ b/app/package.json
@@ -22,9 +22,11 @@
 	"author": "Marco Forster, Marvin Tseng, Manuel Berweger, Dan Hochstrasser, Adrian Schrempp",
 	"license": "MIT",
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"browserify": "^17.0.0",
 		"config": "^3.3.4",
 		"express": "^4.17.1",
+		"fast-safe-stringify": "^2.0.7",
 		"matter-js": "^0.16.1",
 		"mongoose": "^5.11.15",
 		"morgan": "^1.10.0",
