refactor(prettier): :wrench: configured prettier seperately from vscode (#143)
created a configuration for prettier outside of vscode editor config, so
that prettier config is also applied to other IDEs (e.g. IntelliJ)

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -6,7 +6,10 @@
 		"jest": true
 	},
 	"plugins": ["jest"],
-	"extends": "eslint:recommended",
+	"extends": [
+		"eslint:recommended",
+		"prettier"
+	],
 	"parserOptions": {
 		"ecmaVersion": 12
 	},
