--- a/app/package.json
+++ b/app/package.json
@@ -46,17 +46,14 @@
 		"babel-preset-env": "^1.7.0",
 		"bulma": "^0.9.2",
 		"cross-env": "^7.0.3",
+		"eslint-config-prettier": "^8.3.0",
 		"jest": "^26.6.3",
 		"jest-sonar-reporter": "^2.0.0",
 		"nodemon": "^2.0.7",
 		"npm-run-all": "^4.1.5",
+		"prettier": "2.2.1",
 		"sass": "^1.32.11",
 		"superagent": "^6.1.0",
 		"supertest": "^6.1.3"
-	},
-	"prettier": {
-		"trailingComma": "es5",
-		"tabWidth": 4,
-		"useTabs": true
 	}
 }
