ci: :green_heart: exclude tests from analysis (#157)

--- a/azure-ci-cd.yml
+++ b/azure-ci-cd.yml
@@ -4,77 +4,78 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-    - master
+  - master
 
 pr: none
 
 pool: Default
 
 jobs:
-    - job: CICD
-      steps:
-          - task: NodeTool@0
-            inputs:
-                versionSpec: "15.x"
-            displayName: "Install Node.js"
+  - job: CICD
+    steps:
+      - task: NodeTool@0
+        inputs:
+          versionSpec: "15.x"
+        displayName: "Install Node.js"
 
-          - task: Npm@1
-            displayName: Installing app dependencies
-            inputs:
-                command: "install"
-                workingDir: "app"
+      - task: Npm@1
+        displayName: Installing app dependencies
+        inputs:
+          command: "install"
+          workingDir: "app"
 
-          - task: Npm@1
-            displayName: Build app
-            inputs:
-                command: "custom"
-                workingDir: "app"
-                customCommand: "run build"
+      - task: Npm@1
+        displayName: Build app
+        inputs:
+          command: "custom"
+          workingDir: "app"
+          customCommand: "run build"
 
-          - task: Npm@1
-            displayName: Testing app
-            inputs:
-                command: "custom"
-                workingDir: "app"
-                customCommand: "test"
+      - task: Npm@1
+        displayName: Testing app
+        inputs:
+          command: "custom"
+          workingDir: "app"
+          customCommand: "test"
 
-          - task: CmdLine@2
-            displayName: Sonar scanner on app
-            inputs:
-                script: |
-                    export SONAR_SCANNER_VERSION=4.4.0.2170
-                    export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
-                    curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
-                    unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
-                    export PATH=$SONAR_SCANNER_HOME/bin:$PATH
-                    export SONAR_SCANNER_OPTS="-server"
+      - task: CmdLine@2
+        displayName: Sonar scanner on app
+        inputs:
+          script: |
+            export SONAR_SCANNER_VERSION=4.4.0.2170
+            export SONAR_SCANNER_HOME=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux
+            curl --create-dirs -sSLo $HOME/.sonar/sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-$SONAR_SCANNER_VERSION-linux.zip
+            unzip -o $HOME/.sonar/sonar-scanner.zip -d $HOME/.sonar/
+            export PATH=$SONAR_SCANNER_HOME/bin:$PATH
+            export SONAR_SCANNER_OPTS="-server"
 
-                    cd app/
+            cd app/
 
-                    sonar-scanner \
-                      -Dsonar.organization=pathfinder \
-                      -Dsonar.projectKey=StudentRun \
-                      -Dsonar.sources=. \
-                      -Dsonar.host.url=https://sonarcloud.io \
-                      -Dsonar.login=$(SONARLOGIN) \
-                      -Dsonar.testExecutionReportPaths=test-report.xml \
-                      -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info \
-                      -Dsonar.coverage.exclusions=\*\*/__tests__/\*\*,\*\*/config/\*\*,jest.config.js,\*\*/server.js,public/js/module.js,__tests__/
+            sonar-scanner \
+              -Dsonar.organization=pathfinder \
+              -Dsonar.projectKey=StudentRun \
+              -Dsonar.sources=. \
+              -Dsonar.host.url=https://sonarcloud.io \
+              -Dsonar.login=$(SONARLOGIN) \
+              -Dsonar.testExecutionReportPaths=test-report.xml \
+              -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info \
+              -Dsonar.coverage.exclusions=\*\*/__tests__/\*\*,\*\*/config/\*\*,jest.config.js,\*\*/server.js,public/js/module.js,__tests__/ \
+              -Dsonar.exclusions=\*\*/__tests__/\*\*
 
-          - task: CopyFilesOverSSH@0
-            displayName: Copy app to server
-            inputs:
-                sshEndpoint: "PSIT Server"
-                contents: "**"
-                targetFolder: "/opt/studentRun/"
-                readyTimeout: "20000"
-                cleanTargetFolder: true
+      - task: CopyFilesOverSSH@0
+        displayName: Copy app to server
+        inputs:
+          sshEndpoint: "PSIT Server"
+          contents: "**"
+          targetFolder: "/opt/studentRun/"
+          readyTimeout: "20000"
+          cleanTargetFolder: true
 
-          - task: SSH@0
-            displayName: Restart service on server
-            inputs:
-                sshEndpoint: "PSIT Server"
-                runOptions: "commands"
-                commands: "sudo systemctl restart studentrun.service"
-                readyTimeout: "20000"
-                interactiveSession: true
+      - task: SSH@0
+        displayName: Restart service on server
+        inputs:
+          sshEndpoint: "PSIT Server"
+          runOptions: "commands"
+          commands: "sudo systemctl restart studentrun.service"
+          readyTimeout: "20000"
+          interactiveSession: true
