--- a/app/package.json
+++ b/app/package.json
@@ -35,6 +35,7 @@
 		"mongoose": "^5.11.15",
 		"morgan": "^1.10.0",
 		"phaser": "^3.54.0",
+		"poly-decomp": "^0.3.0",
 		"socket.io": "^3.1.2",
 		"socket.io-client": "^4.0.1",
 		"sortedlist": "^0.3.1",
