--- a/azure-ci-cd.yml
+++ b/azure-ci-cd.yml
@@ -59,8 +59,8 @@ jobs:
               -Dsonar.login=$(SONARLOGIN) \
               -Dsonar.testExecutionReportPaths=test-report.xml \
               -Dsonar.javascript.lcov.reportPaths=./coverage/lcov.info \
-              -Dsonar.coverage.exclusions=\*\*/__tests__/\*\*,\*\*/config/\*\*,jest.config.js,\*\*/server.js,public/js/module.js,__tests__/ \
-              -Dsonar.exclusions=\*\*/__tests__/\*\*
+              -Dsonar.coverage.exclusions=\*\*/__tests__/\*\*,\*\*/config/\*\*,jest.config.js,\*\*/server.js,public/js/module.js,__tests__/,public/js/game.js,public/js/join.js,public/js/game/GameScene.js,public/js/view/gameViewController.js,public/js/view/joinViewController.js \
+              -Dsonar.exclusions=\*\*/__tests__/\*\*,
 
       - task: CopyFilesOverSSH@0
         displayName: Copy app to server
